--- a/templates/chartjs.html
+++ b/templates/chartjs.html
@@ -16,6 +16,21 @@
         <div>
             <canvas id="Chart3" width="400" height="400"></canvas>
         </div>
+        <div>
+            <canvas id="Chart4" width="400" height="400"></canvas>
+        </div>
+        <div>
+            <canvas id="Chart5" width="400" height="400"></canvas>
+        </div>
+        <div>
+            <canvas id="Chart6" width="400" height="400"></canvas>
+        </div>
+        <div>
+            <canvas id="Chart7" width="400" height="400"></canvas>
+        </div>
+        <div>
+            <canvas id="Chart8" width="400" height="400"></canvas>
+        </div>
 
         <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
         <script src="https://d3js.org/d3.v5.min.js"></script>
