--- a/templates/chartjs.html
+++ b/templates/chartjs.html
@@ -31,6 +31,9 @@
         <div>
             <canvas id="Chart8" width="400" height="400"></canvas>
         </div>
+        <div>
+            <canvas id="Chart9" width="400" height="400"></canvas>
+        </div>
 
         <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
         <script src="https://d3js.org/d3.v5.min.js"></script>
