--- a/templates/tableau.html
+++ b/templates/tableau.html
@@ -15,8 +15,8 @@
     <nav class="navbar navbar-default">
       <div class="container-fluid">
         <div class="navbar-header">
-            <img class="nav-heroboy" src="../Images/Superboy.png" 
-            a class="navbar-brand" href="index.html">    LEAGUE OF AVENGERS
+            <img class="nav-heroboy" src="../Images/Superboy.png"> 
+            <a class="navbar-brand" href="index.html">    LEAGUE OF AVENGERS
             <img class="nav-herogirl" src="../Images/Supergirl.png">    
             </a>        
         </div>
@@ -37,36 +37,15 @@
         </div>
     </sub-navbar-nav> 
 
-
-    <div class="hero text-center">
-        <p1>SUPERHERO<p1>
-        <img class=".hero" src="../Images/Marvel_vs_DC.png"
-        <p1>  WORLD</p1>
-    </div>  
-    <div class="container">
-        <div class="col-md-12">
-            <div class="card bg-primary; text-white">
-                <div class="card-body">
-                  <h1 style="font-size:175%; font-weight: bold;">OUR MARVEL-LOUS MISSION:</h1>
-                    <ul style="font-size:150%; line-height: 1.6; list-style-type: string;">
-                      <p>A POW-er stricken analysis of the box office performances of movies from the Marvel Cinematic Universe and DC Cinematic Universe. 
-                          Data manipulation was demonstrated by the use of various comparisons that relay the success of individual superhero movie series (ex. THOR franchise vs. IRON MAN, etc.). 
-                          Comparisons of success based off of lead roles factoring gender or race differences.
-                          We also used Machine Learning to predict the success of future movies; including the success of movies based off of which characters/actors are in the movies. 
-                      </p>
-                </ul>
-            </div>
-        </div>
-    </div>
-    </div>
+  <div class='tableauPlaceholder' id='viz1628719317581' style='position: relative'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;MC&#47;MCU_Movie_Analysis&#47;CaptainAmerica&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='MCU_Movie_Analysis&#47;CaptainAmerica' /><param name='tabs' value='yes' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;MC&#47;MCU_Movie_Analysis&#47;CaptainAmerica&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-US' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1628719317581');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.minWidth='420px';vizElement.style.maxWidth='650px';vizElement.style.width='100%';vizElement.style.minHeight='610px';vizElement.style.maxHeight='910px';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';} else { vizElement.style.width='100%';vizElement.style.height='1450px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
     <footer class="footer">
         <div class="container text-center py-3">
             <h3>GitHub:
                 <a href="https://github.com/AnaLindaPenny/final-project.git"> Final Project Link</a>
             </h3>
          <span class="bottom">COPYRIGHT / Trilogy Education Services &copy; 2021. All Rights Reserved / ** For Educational Purposes Only **</span>
+        </div>
     </footer>
-  </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.11.0/d3.js"></script>
 </body>
 
