chart positioning using bootstrap

--- a/templates/chartjs.html
+++ b/templates/chartjs.html
@@ -3,40 +3,108 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">     
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Superhero Films</title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script> 
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/superhero/bootstrap.min.css">
+        <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
+        <link rel="stylesheet" href="../static/css/style.css">
     </head>
 
     <body>
-        <div>
-            <canvas id="Chart1" width="400" height="400"></canvas>
+        <div class="wrapper">
+            <nav class="navbar navbar-default">
+              <div class="container-fluid">
+                <div class="navbar-header">
+                    <img class="nav-heroboy" src="../Images/Superboy.png" 
+                    a class="navbar-brand" href="index.html">    LEAGUE OF AVENGERS
+                    <img class="nav-herogirl" src="../Images/Supergirl.png">    
+                    </a>        
+                </div>
+              </div>
+            </nav>
+            <br>
+            <sub-navbar-nav id="sub-navbar" class="sub-navbar sub-navbar default">
+                <div class="container-fluid">
+                    <ul>
+                        <li><a href="#team">TEAM</a></li>
+                        <li><a href="#mcu">MARVEL CINEMATIC UNIVERSE</a></li>
+                        <li><a href="#dceu">DC EXTD CINEMATIC UNIVERSE</a></li>
+                        <li><a href="#visualizations">VISUALIZATIONS</a></li>
+                        <li><a href="#stocks">STOCKS</a></li>
+                        <li><a href="#api">API</a></li>
+                        <li style="float:right"><a class="active" href="#home">HOME</a></li>
+                    </ul>
+                </div>
+            </sub-navbar-nav>
+
+        <div class="container-fluid">
+            <div class="row mt-5 pt-5">
+                <div class="col bg-white m-5 p-5">
+                    <div>
+                        <canvas id="Chart1"></canvas>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col bg-white m-2 p-2">
+                    <div>
+                        <canvas id="Chart4" width="400" height="400"></canvas>
+                    </div>
+                </div>
+                <div class="col bg-white m-2 p-2">
+                    <div>
+                        <canvas id="Chart5" width="400" height="400"></canvas>
+                    </div>
+                </div>
+                <div class="col bg-white m-2 p-2">
+                    <div>
+                        <canvas id="Chart6" width="400" height="400"></canvas>
+                    </div>
+                </div>
+                <div class="col bg-white m-2 p-2">
+                    <div>
+                        <canvas id="Chart7" width="400" height="400"></canvas>
+                    </div>
+                </div>
+                <div class="col bg-white m-2 p-2">
+                    <div>
+                        <canvas id="Chart8" width="400" height="400"></canvas>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col bg-white m-5 p-5">
+                    <div>
+                        <canvas id="Chart3"></canvas>
+                    </div>
+                </div>
+                <div class="col bg-white m-5 p-5">
+                    <div>
+                        <canvas id="Chart9" width="400" height="400"></canvas>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col bg-white m-5 p-5">
+                    <div>
+                        <canvas id="Chart2"></canvas>
+                    </div>
+                </div>
+            </div>  
         </div>
-        <div>
-            <canvas id="Chart2" width="400" height="400"></canvas>
-        </div>
-        <div>
-            <canvas id="Chart3" width="400" height="400"></canvas>
-        </div>
-        <div>
-            <canvas id="Chart4" width="400" height="400"></canvas>
-        </div>
-        <div>
-            <canvas id="Chart5" width="400" height="400"></canvas>
-        </div>
-        <div>
-            <canvas id="Chart6" width="400" height="400"></canvas>
-        </div>
-        <div>
-            <canvas id="Chart7" width="400" height="400"></canvas>
-        </div>
-        <div>
-            <canvas id="Chart8" width="400" height="400"></canvas>
-        </div>
-        <div>
-            <canvas id="Chart9" width="400" height="400"></canvas>
-        </div>
+
+        <footer class="footer">
+            <div class="container text-center py-3">
+                <h3>GitHub:
+                    <a href="https://github.com/AnaLindaPenny/final-project.git"> Final Project Link</a>
+                </h3>
+             <span class="bottom">COPYRIGHT / Trilogy Education Services &copy; 2021. All Rights Reserved / ** For Educational Purposes Only **</span>
+        </footer>
 
         <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
         <script src="https://d3js.org/d3.v5.min.js"></script>
-        <script src="../static/js/dashboard.js"></script>
+        <script src="../static/js/chartjs.js"></script>
     </body>
 </html>
