modified templates/index.html file

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -22,6 +22,7 @@
     min-height: 50%;
     padding-bottom: 170px;
     overflow: auto;
+    background-color: #041052;
   }
   
   /* The footer is positioned at the bottom of the page */
