--- a/templates/index.html
+++ b/templates/index.html
@@ -31,7 +31,7 @@
                 <li><a href="#dceu">DC EXTD CINEMATIC UNIVERSE</a></li>
                 <li><a href="#visualizations">VISUALIZATIONS</a></li>
                 <li><a href="#stocks">STOCKS</a></li>
-                <li><a href="#api">API</a></li>
+                <li><a href="api.html">API</a></li>
                 <li style="float:right"><a class="active" href="index.html">HOME</a></li>
             </ul>
         </div>
