--- a/templates/maps.html
+++ b/templates/maps.html
@@ -26,13 +26,13 @@
     <sub-navbar-nav id="sub-navbar" class="sub-navbar sub-navbar default">
         <div class="container-fluid">
             <ul>
-                <li><a href="#team">TEAM</a></li>
+                <li><a href="about.html">TEAM</a></li>
                 <li><a href="#mcu">MARVEL CINEMATIC UNIVERSE</a></li>
                 <li><a href="#dceu">DC EXTD CINEMATIC UNIVERSE</a></li>
                 <li><a href="#visualizations">VISUALIZATIONS</a></li>
                 <li><a href="#stocks">STOCKS</a></li>
                 <li><a href="#api">API</a></li>
-                <li style="float:right"><a class="active" href="#home">HOME</a></li>
+                <li style="float:right"><a class="active" href="index.html">HOME</a></li>
             </ul>
         </div>
     </sub-navbar-nav> 
