--- a/templates/about.html
+++ b/templates/about.html
@@ -111,7 +111,7 @@
           <div class="card border-primary text-center text-white col-mb-4 bg-primary" style="max-width: 35rem;">
             <div class="card-header bg-primary">
               <h3>DEREK TORO</h3></div>
-            <img class="card-img-top" src="../Images/DerekT2.png">
+            <img class="card-img-top" src="../Images/DerekT.png">
             <div class="card-body">
               <a class="nav-link text-center" href="https://www.linkedin.com/in/derek-toro-880b13107/" target="_blank">LinkedIn</a>
               <a class="nav-link text-center" href="https://github.com/1der4k" target="_blank">GitHub</a>
