--- a/templates/about.html
+++ b/templates/about.html
@@ -26,12 +26,12 @@
     <sub-navbar-nav id="sub-navbar" class="sub-navbar sub-navbar default">
         <div class="container-fluid">
             <ul>
-                <li><a href="about.html">TEAM</a></li>
-                <li><a href="#mcu">MARVEL CINEMATIC UNIVERSE</a></li>
+                <li><a href="https://leagueofavengers.herokuapp.com/about">TEAM</a></li>
+                <li><a href="https://leagueofavengers.herokuapp.com/mcu">MARVEL CINEMATIC UNIVERSE</a></li>
                 <li><a href="#dceu">DC EXTD CINEMATIC UNIVERSE</a></li>
                 <li><a href="#visualizations">VISUALIZATIONS</a></li>
                 <li><a href="#stocks">STOCKS</a></li>
-                <li><a href="api.html">API</a></li>
+                <li><a href="https://leagueofavengers.herokuapp.com/api/imdb">API</a></li>
                 <li style="float:right"><a class="active" href="index.html">HOME</a></li>
             </ul>
         </div>
