modified templates/index.html file

--- a/templates/maps.html
+++ b/templates/maps.html
@@ -30,8 +30,8 @@
                 <li><a href="#mcu">MARVEL CINEMATIC UNIVERSE</a></li>
                 <li><a href="#dceu">DC EXTD CINEMATIC UNIVERSE</a></li>
                 <li><a href="#visualizations">VISUALIZATIONS</a></li>
-                <li><a href="#stocks">STOCKS</a></li>
-                <li><a href="#api">API</a></li>
+                <li><a href="maps.html">MAPS</a></li>
+                <li><a href="API.html">API</a></li>
                 <li style="float:right"><a class="active" href="index.html">HOME</a></li>
             </ul>
         </div>
