--- a/templates/index.html
+++ b/templates/index.html
@@ -27,11 +27,11 @@
         <div class="container-fluid">
             <ul>
                 <li><a href="about.html">TEAM</a></li>
-                <li><a href="#mcu">MARVEL CINEMATIC UNIVERSE</a></li>
+                <li><a href="mcu.html">MARVEL CINEMATIC UNIVERSE</a></li>
                 <li><a href="#dceu">DC EXTD CINEMATIC UNIVERSE</a></li>
                 <li><a href="#visualizations">VISUALIZATIONS</a></li>
-                <li><a href="#stocks">STOCKS</a></li>
-                <li><a href="api.html">API</a></li>
+                <li><a href="maps.html">MAPS</a></li>
+                <li><a href="API.html">API</a></li>
                 <li style="float:right"><a class="active" href="index.html">HOME</a></li>
             </ul>
         </div>
