--- a/templates/about.html
+++ b/templates/about.html
@@ -16,7 +16,7 @@
       <div class="container-fluid">
         <div class="navbar-header">
             <img class="nav-heroboy" src="../Images/Superboy.png" 
-            a class="navbar-brand" href="index.html">    LEAGUE OF AVENGERS
+            a class="navbar-brand" href="https://leagueofavengers.herokuapp.com">    LEAGUE OF AVENGERS
             <img class="nav-herogirl" src="../Images/Supergirl.png">    
             </a>        
         </div>
@@ -26,13 +26,13 @@
     <sub-navbar-nav id="sub-navbar" class="sub-navbar sub-navbar default">
         <div class="container-fluid">
             <ul>
-                <li><a href="https://leagueofavengers.herokuapp.com/about">TEAM</a></li>
+                <li><a href="https://leagueofavengers.herokuapp.com/about">ABOUT</a></li>
                 <li><a href="https://leagueofavengers.herokuapp.com/mcu">MARVEL CINEMATIC UNIVERSE</a></li>
                 <li><a href="#dceu">DC EXTD CINEMATIC UNIVERSE</a></li>
                 <li><a href="#visualizations">VISUALIZATIONS</a></li>
-                <li><a href="maps.html">MAPS</a></li>
+                <li><a href="https://leagueofavengers.herokuapp.com/maps">MAPS</a></li>
                 <li><a href="https://leagueofavengers.herokuapp.com/api/imdb">API</a></li>
-                <li style="float:right"><a class="active" href="index.html">HOME</a></li>
+                <li style="float:right"><a class="active" href="https://leagueofavengers.herokuapp.com">HOME</a></li>
             </ul>
         </div>
     </sub-navbar-nav> 
@@ -123,7 +123,7 @@
           <div class="card border-primary text-center bg-primary col-mb-4" style="max-width: 35rem;">
             <div class="card-header">
               <h3>KELSEY VERMEER</h3></div>
-            <img class="card-img-top" src="../Images/KelseyV.png">
+            <img class="card-img-top" src="/Images/KelseyV.png">
             <div class="card-body">
               <a class="nav-link text-center" href="https://www.linkedin.com/in/kelsey-vermeer-a61670101/" target="_blank">LinkedIn</a>
               <a class="nav-link text-center" href="https://github.com/kelseyv4" target="_blank">GitHub</a>
