--- a/templates/about.html
+++ b/templates/about.html
@@ -30,7 +30,7 @@
                 <li><a href="https://leagueofavengers.herokuapp.com/mcu">MARVEL CINEMATIC UNIVERSE</a></li>
                 <li><a href="#dceu">DC EXTD CINEMATIC UNIVERSE</a></li>
                 <li><a href="#visualizations">VISUALIZATIONS</a></li>
-                <li><a class="dropdown-item" href="https://leagueofavengers.herokuapp.com/maps">MAPS</a></li>
+                <li><a href="https://leagueofavengers.herokuapp.com/maps">MAPS</a></li>
                 <li><a href="https://leagueofavengers.herokuapp.com/api/imdb">API</a></li>
                 <li style="float:right"><a class="active" href="https://leagueofavengers.herokuapp.com">HOME</a></li>
             </ul>
