--- a/templates/about.html
+++ b/templates/about.html
@@ -31,7 +31,7 @@
                 <li><a href="#dceu">DC EXTD CINEMATIC UNIVERSE</a></li>
                 <li><a href="#visualizations">VISUALIZATIONS</a></li>
                 <li><a href="https://leagueofavengers.herokuapp.com/maps">MAPS</a></li>
-                <li><a href="https://leagueofavengers.herokuapp.com/api/imdb">API</a></li>
+                <li><a href="https://leagueofavengers.herokuapp.com/api">API</a></li>
                 <li style="float:right"><a class="active" href="https://leagueofavengers.herokuapp.com">HOME</a></li>
             </ul>
         </div>
