--- a/templates/API.html
+++ b/templates/API.html
@@ -116,13 +116,13 @@
 <footer class="page-footer font-small blue pt-4">
   <div class="container-fluid text-center text-md-left">
       <div class="row">
-          <p>Thank you for catching a ride with us!</p>
+          <p>We hope you had a Marvel-ous time!</p>
       </div>
       <hr class="clearfix w-100 d-md-none pb-3">
 
   </div>
   <div class="footer-copyright text-center py-3">Project Github: 
-      <a href="https://github.com/MorgaineB/Project2"> github.com</a>
+      <a href="https://github.com/AnaLindaPenny/final-project.git"> github.com</a>
   </div>
   </footer>  
 
