--- a/templates/about.html
+++ b/templates/about.html
@@ -123,7 +123,7 @@
           <div class="card border-primary text-center bg-primary col-mb-4" style="max-width: 35rem;">
             <div class="card-header">
               <h3>KELSEY VERMEER</h3></div>
-            <img class="card-img-top" src="/Images/kelseyv.png">
+            <img class="card-img-top" src="Images\kelseyv.png>
             <div class="card-body">
               <a class="nav-link text-center" href="https://www.linkedin.com/in/kelsey-vermeer-a61670101/" target="_blank">LinkedIn</a>
               <a class="nav-link text-center" href="https://github.com/kelseyv4" target="_blank">GitHub</a>
