--- a/templates/about.html
+++ b/templates/about.html
@@ -204,8 +204,8 @@
 </footer>
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.11.0/d3.js"></script>
-<script src="style.css"></script>
-<script src="index.html"></script>
+<!-- <script src="style.css"></script>
+<script src="index.html"></script> -->
 
 </body>
 
