--- a/templates/about.html
+++ b/templates/about.html
@@ -205,7 +205,7 @@
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.11.0/d3.js"></script>
 <script src="style.css"></script> -->
-<script src="index.html"></script>
+<script src="templates\index.html></script>
 
 </body>
 
