--- a/templates/about.html
+++ b/templates/about.html
@@ -15,9 +15,9 @@
     <nav class="navbar navbar-default">
       <div class="container-fluid">
         <div class="navbar-header">
-            <img class="nav-heroboy" src="../Images/Superboy.png" 
+            <img class="nav-heroboy" src="/static/Superboy.png" 
             a class="navbar-brand" href="https://leagueofavengers.herokuapp.com">    LEAGUE OF AVENGERS
-            <img class="nav-herogirl" src="../Images/Supergirl.png">    
+            <img class="nav-herogirl" src="/static/Supergirl.png">    
             </a>        
         </div>
       </div>
@@ -59,7 +59,7 @@
       <div class="card border-primary text-center bg-primary col-mb-4" style="max-width: 35rem;">
         <div class="card-header bg-primary">
           <h3>A. LINDA PENNY</h3></div>
-        <img class="card-img-top" src="../Images/AnaLindaP.jpg">
+        <img class="card-img-top" src="/static/AnaLindaP.jpg">
         <div class="card-body">
           <a class="nav-link text-center" href="https://www.linkedin.com/in/linda-penny" target="_blank">LinkedIn</a>
           <a class="nav-link text-center" href="https://github.com/in/AnaLindaPenny" target="_blank">GitHub</a>
@@ -71,7 +71,7 @@
       <div class="card border-primary text-center col-mb-4 bg-primary" style="max-width: 35rem;">
         <div class="card-header">
           <h3>TRUMANE LEE</h3></div>
-        <img class="card-img-top" src="../Images/TrumaneL.jpg">
+        <img class="card-img-top" src="/static/TrumaneL.jpg">
         <div class="card-body">
         <a class="nav-link text-center" href="https://www.linkedin.com/in/trumane-lee/" target="_blank">LinkedIn</a>
         <a class="nav-link text-center" href="https://github.com/Trumane12311" target="_blank">GitHub</a>
@@ -83,7 +83,7 @@
       <div class="card border-primary text-center bg-primary col-mb-4" style="max-width: 35rem;">
         <div class="card-header">
           <h3>SYDNEY CAVALLARO</h3></div>
-        <img class="card-img-top" src="../Images/SydneyC.jpg">
+        <img class="card-img-top" src="/static/Images/SydneyC.jpg">
         <div class="card-body">
           <a class="nav-link text-center" href="https://www.linkedin.com/in/sydneycavallaro/" target="_blank">LinkedIn</a>
           <a class="nav-link text-center" href="https://github.com/syd-cavs" target="_blank">GitHub</a>
@@ -99,7 +99,7 @@
           <div class="card border-primary text-center bg-primary col-mb-4" style="max-width: 35rem;">
             <div class="card-header bg-primary">
               <h3>MORGAINE BOWERS</h3></div>
-            <img class="card-img-top" src="../Images/MorgaineB.jpg">
+            <img class="card-img-top" src="/static/MorgaineB.jpg">
             <div class="card-body">
               <a class="nav-link text-center" href="https://www.linkedin.com/in/morgaine-bowers-bb635974/" target="_blank">LinkedIn</a>
               <a class="nav-link text-center" href="https://github.com/MorgaineB/" target="_blank">GitHub</a>
@@ -111,7 +111,7 @@
           <div class="card border-primary text-center text-white col-mb-4 bg-primary" style="max-width: 35rem;">
             <div class="card-header bg-primary">
               <h3>DEREK TORO</h3></div>
-            <img class="card-img-top" src="../Images/DerekT.jpg">
+            <img class="card-img-top" src="/static/DerekT.jpg">
             <div class="card-body">
               <a class="nav-link text-center" href="https://www.linkedin.com/in/derek-toro-880b13107/" target="_blank">LinkedIn</a>
               <a class="nav-link text-center" href="https://github.com/1der4k" target="_blank">GitHub</a>
@@ -192,7 +192,7 @@
 <br>
   <div class="row">
     <div class="column2">      
-      <img src="../Images/Supergirl.png" alt="Supergirl" style="width: 275px"> 
+      <img src="/static/Supergirl.png" alt="Supergirl" style="width: 275px"> 
 
 <br>
 <footer class="footer">
