--- a/templates/chartjs.html
+++ b/templates/chartjs.html
@@ -18,9 +18,9 @@
             <nav class="navbar navbar-default">
               <div class="container-fluid">
                 <div class="navbar-header">
-                    <img class="nav-heroboy" src="../Images/Superboy.png" 
+                    <img class="nav-heroboy" src="/static/Superboy.png" 
                     a class="navbar-brand" href="index.html">    LEAGUE OF AVENGERS
-                    <img class="nav-herogirl" src="../Images/Supergirl.png">    
+                    <img class="nav-herogirl" src="/static/Supergirl.png">    
                     </a>        
                 </div>
               </div>
