--- a/templates/index.html
+++ b/templates/index.html
@@ -15,9 +15,9 @@
     <nav class="navbar navbar-default">
       <div class="container-fluid">
         <div class="navbar-header">
-            <img class="nav-heroboy" src="../Images/Superboy.png" 
+            <img class="nav-heroboy" src="/static/Superboy.png" 
             a class="navbar-brand" href="index.html">    LEAGUE OF AVENGERS
-            <img class="nav-herogirl" src="../Images/Supergirl.png">    
+            <img class="nav-herogirl" src="/static/Supergirl.png">    
             </a>        
         </div>
       </div>
@@ -27,12 +27,12 @@
         <div class="container-fluid">
             <ul>
                 <li><a href="about.html">TEAM</a></li>
-                <li><a href="mcu.html">MARVEL CINEMATIC UNIVERSE</a></li>
+                <li><a href="#mcu">MARVEL CINEMATIC UNIVERSE</a></li>
                 <li><a href="#dceu">DC EXTD CINEMATIC UNIVERSE</a></li>
                 <li><a href="#visualizations">VISUALIZATIONS</a></li>
-                <li><a href="maps.html">MAPS</a></li>
-                <li><a href="API.html">API</a></li>
-                <li style="float:right"><a class="active" href="index.html">HOME</a></li>
+                <li><a href="#stocks">STOCKS</a></li>
+                <li><a href="api.html">API</a></li>
+                <li style="float:right"><a class="active" href="https://leagueofavengers.herokuapp.com">HOME</a></li>
             </ul>
         </div>
     </sub-navbar-nav> 
@@ -40,7 +40,7 @@
 <br>
     <div class="hero text-center">
         <p1>SUPERHERO<p1>
-        <img class=".hero" src="../Images/Marvel_vs_DC.png"
+        <img class=".hero" src="/static/Marvel_vs_DC.png"
         <p1>  WORLD</p1>
     </div>  
     <div class="container">
