--- a/templates/about.html
+++ b/templates/about.html
@@ -71,7 +71,7 @@
       <div class="card border-primary text-center col-mb-4 bg-primary" style="max-width: 35rem;">
         <div class="card-header">
           <h3>TRUMANE LEE</h3></div>
-        <img class="card-img-top" src="/static/TrumaneL.jpg">
+        <img class="card-img-top" src="/static/Images/TrumaneL.jpg">
         <div class="card-body">
         <a class="nav-link text-center" href="https://www.linkedin.com/in/trumane-lee/" target="_blank">LinkedIn</a>
         <a class="nav-link text-center" href="https://github.com/Trumane12311" target="_blank">GitHub</a>
