--- a/templates/about.html
+++ b/templates/about.html
@@ -15,9 +15,9 @@
     <nav class="navbar navbar-default">
       <div class="container-fluid">
         <div class="navbar-header">
-            <img class="nav-heroboy" src="/static/Superboy.png" 
+            <img class="nav-heroboy" src="/static/Images/Superboy.png" 
             a class="navbar-brand" href="https://leagueofavengers.herokuapp.com">    LEAGUE OF AVENGERS
-            <img class="nav-herogirl" src="/static/Supergirl.png">    
+            <img class="nav-herogirl" src="/static/Images/Supergirl.png">    
             </a>        
         </div>
       </div>
@@ -59,7 +59,7 @@
       <div class="card border-primary text-center bg-primary col-mb-4" style="max-width: 35rem;">
         <div class="card-header bg-primary">
           <h3>A. LINDA PENNY</h3></div>
-        <img class="card-img-top" src="/static/AnaLindaP.jpg">
+        <img class="card-img-top" src="/static/ImagesAnaLindaP.jpg">
         <div class="card-body">
           <a class="nav-link text-center" href="https://www.linkedin.com/in/linda-penny" target="_blank">LinkedIn</a>
           <a class="nav-link text-center" href="https://github.com/in/AnaLindaPenny" target="_blank">GitHub</a>
@@ -99,7 +99,7 @@
           <div class="card border-primary text-center bg-primary col-mb-4" style="max-width: 35rem;">
             <div class="card-header bg-primary">
               <h3>MORGAINE BOWERS</h3></div>
-            <img class="card-img-top" src="/static/MorgaineB.jpg">
+            <img class="card-img-top" src="/static/Images/MorgaineB.jpg">
             <div class="card-body">
               <a class="nav-link text-center" href="https://www.linkedin.com/in/morgaine-bowers-bb635974/" target="_blank">LinkedIn</a>
               <a class="nav-link text-center" href="https://github.com/MorgaineB/" target="_blank">GitHub</a>
@@ -111,7 +111,7 @@
           <div class="card border-primary text-center text-white col-mb-4 bg-primary" style="max-width: 35rem;">
             <div class="card-header bg-primary">
               <h3>DEREK TORO</h3></div>
-            <img class="card-img-top" src="/static/DerekT.jpg">
+            <img class="card-img-top" src="/static/Images/DerekT.jpg">
             <div class="card-body">
               <a class="nav-link text-center" href="https://www.linkedin.com/in/derek-toro-880b13107/" target="_blank">LinkedIn</a>
               <a class="nav-link text-center" href="https://github.com/1der4k" target="_blank">GitHub</a>
@@ -123,7 +123,7 @@
           <div class="card border-primary text-center bg-primary col-mb-4" style="max-width: 35rem;">
             <div class="card-header">
               <h3>KELSEY VERMEER</h3></div>
-            <img class="card-img-top" src="Images/kelseyv.png">
+            <img class="card-img-top" src="/static/Images/kelseyv.png">
             <div class="card-body">
               <a class="nav-link text-center" href="https://www.linkedin.com/in/kelsey-vermeer-a61670101/" target="_blank">LinkedIn</a>
               <a class="nav-link text-center" href="https://github.com/kelseyv4" target="_blank">GitHub</a>
